--- a/taiko/battle-no1/index.html
+++ b/taiko/battle-no1/index.html
@@ -118,17 +118,7 @@ td {
     <button class="search-submit">検索</button>
   </div>
   <div class="results" id="results">
-    <p>検索結果</p>
-    <div class="res">
-      <div class="type-number">Type No.251052</div>
-      <div class="prev-dif">
-        <div class="sdif-f"></div><div class="sdif-k"></div><div class="sdif-t"></div>
-      </div>
-      <div class="res-info">
-        <div class="res-combo">706コンボ</div><div class="res-mpt">1002000点＋自由連打</div>
-      </div>
-      <div style="visibility: hidden;">0123456789日本語</div>
-    </div>
+    <p>検索結果はここに表示されます</p>
   </div>
   <script>
     const bunki = {
