--- a/private/wni.html
+++ b/private/wni.html
@@ -1,17 +1,14 @@
  <html style="overflow: hidden;">
 	<head>
+    <meta charset="utf-8">
 		<style type="text/css">
-			p {
-				font-size: 13px;
-			}
+			p { font-size: 13px; }
 		</style>
 		<title>Weathernews LiVE</title>
 		<!-- kusanone-net.com 地震速報ブログパーツVer2.3
 		★設定方法 http://www.kusanone-net.com/blog-part.php#FIXSET -->
-		<script type="text/javascript" src="http://www.kusanone-net.com/KusanoneQuakeAutoDisp23.js?code=UTF-8&width=150&oldDisp=off&sindo=1&position=0&test=off" charset="utf-8"></script>
+		<script type="text/javascript" src="https://www.kusanone-net.com/KusanoneQuakeAutoDisp23.js?code=UTF-8&width=150&oldDisp=off&sindo=1&position=0&test=off" charset="utf-8"></script>
 		<!-- /kusanone-net.com 地震速報ブログパーツ-->
-		<link rel="⁨stylesheet" href="inline.css">
-		<meta charset="utf-8">
 	</head>
 	<body>
 		<p>地震が発生した場合に、ここに地震情報が表示されます。<br></p>
