--- a/private/wni.html
+++ b/private/wni.html
@@ -21,18 +21,18 @@
 	<body>
     <div class="flex">
       <div class="item">
-    		<p><a href="#" id="wni_live_chat" target="_blank" rel="nofollow noreferrer">チャット欄</a></p>
+        <p><a href="#" id="wni_live_chat" target="_blank" rel="nofollow noreferrer">チャット欄</a></p>
         <iframe id="wni_live" width="640" height="360" src="https://www.youtube-nocookie.com/embed/zAdWzjab1B8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="item">
-    		<p><a href="https://www.youtube.com/live_chat?is_popout=1&v=ZeZ049BUy8Q" id="bsc_live_chat" target="_blank" rel="nofollow noreferrer">チャット欄</a></p>
+        <p><a href="https://www.youtube.com/live_chat?is_popout=1&v=ZeZ049BUy8Q" id="bsc_live_chat" target="_blank" rel="nofollow noreferrer">チャット欄</a></p>
         <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/ZeZ049BUy8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="inline"></iframe>
       </div>
     </div>
     <script>
       let wni_iframe = document.getElementById("wni_live");
       let chat = document.getElementById("wni_live_chat");2
-      fetch("https://weathernews.jp/s/live/json/youtube_cyclic.json").then(response => response.json()).then(json => {
+      fetch("https://weathernews.jp/s/live/json/youtube_cyclic.json?t="+Date.now()).then(response => response.json()).then(json => {
         wni_iframe.src = "https://www.youtube-nocookie.com/embed/" + json.code;
         chat.href = "https://www.youtube.com/live_chat?is_popout=1&v=" + json.code;
       });
