--- a/private/weather/index.html
+++ b/private/weather/index.html
@@ -68,6 +68,9 @@
       bottom: 77px;
       left: 0;
       padding: 4px 15px;
+      max-width: calc(100vw - 300px);
+      overflow-x: scroll;
+      white-space: nowrap;
       font: 20px sans-serif;
       color: #fff;
       z-index: 9999;
