--- a/private/typhoon/test.html
+++ b/private/typhoon/test.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <button onclick=" initialize(true) ">Reload</button>
-    <p id="matrix" style="font-size: 8px;"></p>
+    <p id="matrix" style="display: none;"></p>
     <p id="info"></p>
     <div id="typh_title" style="width: 502px; background-color: #082080; text-align: center; font: 15px sans-serif; color: #fff; padding: 3px 10px;"></div>
     <canvas id="canvas" style="width: 520px; height: 376px; border: solid 1px #333;" width="1040" height="752"></canvas>
