--- a/private/typhoon/test.html
+++ b/private/typhoon/test.html
@@ -316,7 +316,7 @@
       let transform = ct.getTransform();
       // ct.setTransform(transform.m11, 0, 0, transform.m22, transform.m41, transform.m42);
 
-      ct.setTransform(2, 0, 0, 2, -141, -386);
+      ct.setTransform(6.1321821212768555, 0, 0, 6.1321821212768555, -860.748291015625, -1366.782958984375);
       transform = ct.getTransform();
 
       let coords = {};
