--- a/private/typhoon/test.html
+++ b/private/typhoon/test.html
@@ -23,6 +23,10 @@
       <div>
         <div id="typh_title" style="width: 502px; background-color: #082080; text-align: center; font: 15px sans-serif; color: #fff; padding: 3px 10px;"></div>
         <canvas id="canvas" style="width: 520px; height: 376px; border: solid 1px #333;" width="1040" height="752"></canvas>
+        <div id="typh_view_set" style="width: 502px; background-color: #075074; text-align: center; font: 15px sans-serif; color: #fff; padding: 3px 10px; margin-bottom: 7px;">
+          <label for="typh_view_fcst">予報を表示</label>
+          <input type="checkbox" id="typh_view_fcst" name="typh_view_fcst" checked>
+        </div>
         <div id="typh_comment" style="width: 522px;"></div>
       </div>
       <div style="margin-left: 8px;" id="typh-info-table-list">
@@ -248,6 +252,7 @@
       const canvas_forecast = document.createElement("canvas");
       const typh_title = document.getElementById("typh_title");
       const typh_comment = document.getElementById("typh_comment");
+      const typh_view_fcst = document.getElementById("typh_view_fcst");
       const typh_info_table_list = document.getElementById("typh-info-table-list");
       canvas.width = viewWidth * deviceRatio;
       canvas.height = viewHeight * deviceRatio;
@@ -307,7 +312,7 @@
           isStateChanged = true;
         }
       });
-      document.addEventListener("click", ()=>{
+      document.addEventListener("mouseup", ()=>{
         event.preventDefault();
         isMoving = false;
         isStateChanged = true;
@@ -352,7 +357,7 @@
       async function initialize(flag){
         typh_title.textContent = "読み込み中・・・";
         coords = await fetch("./json/typhoon_pos_wgs84.json").then(response => response.json());
-        let typhinfo = await fetch("https://weathernews.jp/ip/typhoon_data.json").then(response => response.json());
+        let typhinfo = await fetch("https://weathernews.jp/ip/typhoon_data.json?_="+Date.now()).then(response => response.json());
 
         typhinfo = typhinfo.typhoon[0];
         typh_title.textContent = typhinfo.name.replace(":", " - ");
@@ -447,6 +452,7 @@
       }
 
       let isStateChanged = true;
+      let isForecastViewed = true;
       function main(){
 
         if (isStateChanged){
@@ -524,7 +530,7 @@
           });
           ct.setTransform(deviceRatio, 0, 0, deviceRatio, 0, 0);
           ct.globalAlpha = .3;
-          ct.drawImage(canvas_forecast, 0, 0, viewWidth * deviceRatio, viewHeight * deviceRatio, 0, 0, viewWidth, viewHeight);
+          if (isForecastViewed) ct.drawImage(canvas_forecast, 0, 0, viewWidth * deviceRatio, viewHeight * deviceRatio, 0, 0, viewWidth, viewHeight);
           ct.transform(transform.m11, 0, 0, transform.m22, transform.m41, transform.m42);
 
           ct_forecast.setTransform(deviceRatio, 0, 0, deviceRatio, 0, 0);
@@ -562,7 +568,7 @@
             ct_forecast.ellipse(storm_0x, storm_0y, storm_rad, storm_rad, 0, 0, 6.283184);
             ct_forecast.fill();
             forecast_positions.push([storm_0x, storm_0y, (storm_rad+8) * 0.75, (storm_rad+8) * 1.3, forecast.label, forecast.disp]);
-            if(forecast.disp){
+            if(forecast.disp && isForecastViewed){
               ct.beginPath();
               ct.arc(storm_0x, storm_0y, storm_rad, 0, 6.283184);
               ct.stroke();
@@ -570,19 +576,19 @@
           });
           ct.setTransform(deviceRatio, 0, 0, deviceRatio, 0, 0);
           ct.globalAlpha = 0.3;
-          ct.drawImage(canvas_forecast, 0, 0, viewWidth * deviceRatio, viewHeight * deviceRatio, 0, 0, viewWidth, viewHeight);
+          if (isForecastViewed) ct.drawImage(canvas_forecast, 0, 0, viewWidth * deviceRatio, viewHeight * deviceRatio, 0, 0, viewWidth, viewHeight);
           ct.transform(transform.m11, 0, 0, transform.m22, transform.m41, transform.m42);
 
           ct.globalAlpha = 1;
           ct.fillStyle = "#fff";
           ct.setLineDash([]);
           ct.beginPath();
-          forecast_positions.forEach((position, i) => { if(i) ct.lineTo(position[0], position[1]); else ct.moveTo(position[0], position[1]); });
+          if (isForecastViewed) forecast_positions.forEach((position, i) => { if(i) ct.lineTo(position[0], position[1]); else ct.moveTo(position[0], position[1]); });
           ct.stroke();
           ct.lineWidth = 1 / transform.m11;
           ct.font = "bold 6px 'ヒラギノ角ゴ ProN'";
-          forecast_positions.forEach(position => {
-            if (position[5]){
+          forecast_positions.forEach((position, i) => {
+            if ((isForecastViewed || i === 0) && position[5]){
               ct.strokeStyle = "#fff";
               ct.beginPath();
               ct.arc(position[0], position[1], 2 / transform.m11, 0, 6.283184);
@@ -634,7 +640,13 @@
         requestAnimationFrame(main);
       }
 
+      typh_view_fcst.addEventListener("change", () => {
+        isStateChanged = true;
+        isForecastViewed = typh_view_fcst.checked;
+      });
+
       initialize();
+      setInterval(initialize, 180000);
     </script>
   </body>
 </html>
