--- a/private/warning.html
+++ b/private/warning.html
@@ -30,7 +30,7 @@
     <text x="4" y="19" fill="#ffffff" font-size="14" id="title">情報取得中・・・</text>
     <text x="15" y="49" fill="#ffffff" font-size="26" id="region" textLength="260" lengthAdjust="spacingAndGlyphs"></text>
   </svg>
-  <p>v1.0.1</p>
+  <p>v1.0.1（自動更新実装）</p>
   <script>
     const canvas = document.createElement("canvas");
     const ctx = canvas.getContext("2d");
